Fixed button text being invisible on hover (same colors)

--- a/frontend/src/components/BusinessInfo/BusinessInfo.css
+++ b/frontend/src/components/BusinessInfo/BusinessInfo.css
@@ -40,3 +40,11 @@
     gap: .75rem;
     margin-top: 1rem;
 }
+
+.yelp-btn a {
+    color: white;
+}
+
+.yelp-btn a:hover {
+    color: black;
+}
